fix sonar cloud issue